fix: Fixed unit and integrations tests
